# paintComp

./: .gitignore  README.md  app.json  package-lock.json  package.json
app/: _layout.tsx  index.tsx
app/canvas/: [id].tsx
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json
src/: types.ts
src/components/: BoardCanvas.tsx  ImageLayer.tsx  ImportButton.tsx
src/hooks/: useBoardTransform.ts  usePanGesture.ts
src/services/board/: grid.ts  useViewportTransform.ts
src/services/database/: boardService.ts  database.ts  imageService.ts  mmkvStorage.ts
src/services/gesture/: useDragGesture.ts  usePanGesture.ts  useZoomGesture.ts
src/services/images/: imageImport.ts  imagePicker.ts
src/services/storage/: mmkvStorage.ts
src/utils/: constants.ts  designTokens.ts  gridUtils.ts
